# chess

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: board.cpp  board.h  game.cpp  game.h  move.h  piece.cpp  piece.h
src/resource/: resource_manager.cpp
src/utils/: logger.cpp  logger.h
